endring i swagger, og i return type
